--- a/index.html
+++ b/index.html
@@ -25,13 +25,7 @@
       <div class="giangsinh">
         <h3 class="dichoi">Hiền đi chơi Noel với tớ nhé ?</h3>
         <div class="tong d-flex justify-content-center">
-          <button
-            class="btn btn-primary dongy me-2"
-            data-bs-toggle="modal"
-            data-bs-target="#exampleModal"
-          >
-            Đồng ý
-          </button>
+          <button class="btn btn-primary dongy me-2">Đồng ý</button>
           <button class="btn btn-danger khong ms-2">Không</button>
           <audio
             src="./audio/do-anh-bat-duoc-em-bang-nhieu-thu-tieng.mp3"
