--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
       class="main container-fluid d-flex justify-content-center align-items-center"
     >
       <div class="giangsinh">
-        <h3 class="dichoi">Hiền đi chơi Noel với tớ nhé ?</h3>
+        <h3 class="dichoi">Em có yêu anh không ?</h3>
         <div class="tong d-flex justify-content-center">
-          <button class="btn btn-primary dongy me-2">Đồng ý</button>
+          <button class="btn btn-primary dongy me-2">Có</button>
           <button class="btn btn-danger khong ms-2">Không</button>
           <audio
             src="./audio/do-anh-bat-duoc-em-bang-nhieu-thu-tieng.mp3"
@@ -33,14 +33,14 @@
           ></audio>
         </div>
       </div>
-      <h2 class="chu">Giáng sinh vui vẻ (^-^)</h2>
-      <audio src="./audio/lastChristmate.mp3" class="audio2"></audio>
+      <h2 class="chu">Anh yêu em rất nhiều (^-^)</h2>
+      <audio src="./audio/smile.mp3" class="audio2"></audio>
       <div class="icons">
-        <i class="bi bi-snow2 snows"></i>
+        <i class="bi bi-arrow-through-heart snows"></i>
       </div>
       <div class="d-flex justify-content-center align-items-center img">
         <img
-          src="./images/hienthi.jpg"
+          src="./images/hienthi2.jpg"
           width="500"
           height="500"
           class="img-fluid"
